Bug fixes
-> Added scrollbar to pin sidebar to allow small devices to see entire
list. (Needs testing!)

-> Fixed button for opening sidebar on mobile. Touch event added.

--- a/css/index.css
+++ b/css/index.css
@@ -106,6 +106,15 @@ button {
 		) !important;
 }
 
-#pinNavigationSidebar {
-	overflow-y: hidden !important;
+#pinNavigationSidebar { /*iOS fix (of course...) */
+	overflow: auto;
+	overflow-y: scroll !important;
+	overflow-x: hidden;
+	-webkit-overflow-scrolling: touch;
+	height: 100vh;
+}
+
+.pinInfoContent {
+	font-weight: bolder;
+	font-size: 1.1em;
 }
